--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -12,18 +12,24 @@
 }
 
 .pictureDisplay {
-  display: grid;
+  display: flex;
   gap: 1.5rem;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  flex-direction: column;
+  object-fit: contain;
+  flex: 2;
+  align-items: center;
 }
 
 .pictureCard {
+  display: flex;
   background-color: lightblue;
   border: 1px solid #ddd;
   border-radius: 10px;
   padding: 1rem;
   text-align: center;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+  width: 40%;
 }
 
 .pictureCard img {
@@ -33,15 +39,15 @@
   border: 1px solid black;
 }
 
-.pictureInfo {
-  font-size: 1rem;
+.info {
+  font-size: 20px;
   color: black;
-  font-weight: 300;
+  font-weight: 600;
 }
 
 .loading {
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 2em;
   color: #888;
-  padding: 2rem 0;
+  font-weight: bold;
 }
