--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -2,10 +2,17 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 40px;
+    gap: 10em;
+}
+
+.colContainer {
+    display: flex;
+    flex-direction: row;
 }
 
 .headerContainer>h1{
     text-align: center;
-    color: white;
-    font-size: larger;
+    color: black;
+    font-size: 7em;
+    font-weight: bolder;
 }
