--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -51,3 +51,32 @@
   color: #888;
   font-weight: bold;
 }
+
+/* Media query for iPhone 14 Max */
+@media (max-width: 430px) {
+  .pageContainer {
+    margin: 1rem;
+  }
+
+  .header {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+
+  .pictureDisplay {
+    gap: 1rem;
+  }
+
+  .pictureCard {
+    width: 100%;
+    padding: 0.75rem;
+  }
+
+  .info {
+    font-size: 18px;
+  }
+
+  .loading {
+    font-size: 1.5em;
+  }
+}
